<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.ClearCartDialogFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        tools:context=".view.dialog_fragment.CartClearDialogFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/txt_confirm"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/confirmationMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="@string/txt_cart_clear_text_"
                android:textAlignment="center"
                android:textColor="@color/colorDarkGray"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="22dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancelBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:background="@drawable/input_text_5_bg"
                    android:backgroundTint="@color/colorLogo3"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginEnd="5dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    android:text="@string/txt_no"
                    android:textColor="@android:color/white"
                    android:textSize="13sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/clearBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/input_text_5_bg"
                    android:backgroundTint="@color/colorAccent"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    android:text="@string/txt_yes"
                    android:textColor="@android:color/white"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</FrameLayout>