<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.cmt.viewModel.fragment.ForogotPasswordVM" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        android:paddingTop="35dp"
        android:paddingBottom="20dp"
        tools:context=".view.fragment.ForgotPasswordFragment">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/semibold"
            android:text="@string/txt_forgot_password"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:lines="2"
            android:maxLines="2"
            android:paddingEnd="25dp"
            android:text="@string/txt_enter_your_mobile_mail_to_recover"
            android:textColor="@color/colorCartText"
            android:textSize="13sp"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userId"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:animateLayoutChanges="false"
            android:hint="@string/txt_mobile_no_email_id"
            app:boxStrokeColor="@color/colorInputText"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:errorTextColor="@android:color/holo_red_dark"
            app:errorEnabled="true"
            app:hintTextColor="@color/colorInputText"
            app:hintAnimationEnabled="false"
        >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ietMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:fontFamily="@font/semibold"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:text="@={viewModel.userId}"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/input_text_5_bg"
            android:backgroundTint="@color/colorAccent"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/semibold"
            android:foreground="?attr/selectableItemBackground"
            android:onClick="@{viewModel::sendOtp}"
            android:padding="16dp"
            android:text="@string/txt_send_otp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

</layout>