<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.cmt.viewModel.activity.MainActivityViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">

         <!--       <ImageView
                    android:id="@+id/profilePic"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/ic_circle"
                    android:backgroundTint="@color/colorMenuProfileBg"
                    android:contentDescription="@string/hint_image"
                    android:src="@drawable/man" />

-->
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilePic"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="18dp"
                    android:background="@drawable/ic_circle"
                    android:backgroundTint="@color/colorMenuProfileBg"
                    android:contentDescription="@string/hint_image"
                    bind:circularImage="@{viewModel.model.image}"
                    tools:src="@drawable/man" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="10dp"
                    android:layout_toEndOf="@+id/profilePic"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/profileName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoSizeMaxTextSize="20sp"
                        android:autoSizeMinTextSize="17sp"
                        android:autoSizeTextType="uniform"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:targetApi="o"
                        tools:text="@string/app_name" />

                    <TextView
                        android:id="@+id/mobileNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoSizeMaxTextSize="16sp"
                        android:autoSizeMinTextSize="14sp"
                        android:autoSizeTextType="uniform"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        tools:targetApi="o"
                        tools:text="@string/dummy_mobile_9865741203" />
                </LinearLayout>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="22dp"
                android:background="@color/colorMenuProfileBg" />

            <LinearLayout
                android:id="@+id/menu_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9dp"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/menu_home"
                    android:textSize="14sp"
                    app:drawableStartCompat="@drawable/home_icon" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorMenuProfileBg" />

            <LinearLayout
                android:id="@+id/menu_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9dp"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/menu_categories"
                    android:textSize="14sp"
                    app:drawableStartCompat="@drawable/categoriees" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorMenuProfileBg" />

            <LinearLayout
                android:id="@+id/menu_membership"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9dp"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/menu_my_membership"
                    android:textSize="14sp"
                    app:drawableStartCompat="@drawable/my_membership" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorMenuProfileBg" />

            <LinearLayout
                android:id="@+id/menu_courses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9dp"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/menu_my_courses"
                    android:textSize="14sp"
                    app:drawableStartCompat="@drawable/my_membership" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorMenuProfileBg" />

            <LinearLayout
                android:id="@+id/menu_orders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9dp"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/menu_my_order"
                    android:textSize="14sp"
                    app:drawableStartCompat="@drawable/my_order" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorMenuProfileBg" />

            <LinearLayout
                android:id="@+id/menu_changePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9dp"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/menu_change_password"
                    android:textSize="14sp"
                    app:drawableStartCompat="@drawable/change_password" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorMenuProfileBg" />

            <LinearLayout
                android:id="@+id/menu_logOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9dp"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/menu_logout"
                    android:textSize="14sp"
                    app:drawableStartCompat="@drawable/logout" />

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>