<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.cmt.viewModel.fragment.EditProfileVM" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.fragment.EditMyProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImg"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/ic_circle"
                android:backgroundTint="@color/colorMenuProfileBg"
                android:contentDescription="@string/hint_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                bind:circularImage="@{viewModel.editProfileModel.image}"
                tools:src="@drawable/man" />

            <ImageView
                android:id="@+id/imagePicker"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:backgroundTint="@color/colorPrimary"
                android:clickable="true"
                android:contentDescription="@string/hint_image"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/ic_camera_picker"
                app:layout_constraintBottom_toBottomOf="@+id/profileImg"
                app:layout_constraintEnd_toEndOf="@+id/profileImg"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/profileImg"
                app:layout_constraintTop_toTopOf="@+id/profileImg"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:animateLayoutChanges="false"
            android:hint="@string/txt_name"
            app:boxStrokeColor="@color/colorInputText"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:hintAnimationEnabled="false"
            app:hintTextColor="@color/colorInputText">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:text="@={viewModel.editProfileModel.name}"
                android:textSize="14sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/input_text_5_bg"
            android:hint="@string/txt_email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="18dp"
            android:text="@{viewModel.editProfileModel.email}"
            android:textColor="@color/colorText"
            android:textSize="14sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobileNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/input_text_5_bg"
            android:digits="0123456987"
            android:hint="@string/txt_phone"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="10"
            android:padding="18dp"
            android:text="@{viewModel.editProfileModel.mobile}"
            android:textColor="@color/colorText"
            android:textSize="14sp"
            android:textStyle="bold" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/updateProfileBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:background="@drawable/input_text_5_bg"
            android:backgroundTint="@color/colorAccent"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/semibold"
            android:foreground="?attr/selectableItemBackground"
            android:onClick="@{viewModel::updateProfile}"
            android:padding="16sp"
            android:text="@string/txt_update_profile"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


    </LinearLayout>
</layout>